<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bbraunVerde"
    tools:context=".CalculadoraSolucoes">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:background="@color/bbraunRoxo"
        android:gravity="center"
        android:shadowColor="@color/backgroundBlack"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/calculadoraSolucoes"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewVolume"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewVolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="monospace"
        android:shadowColor="@color/backgroundBlack"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/volume"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:checkedButton="@id/radioButton100"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVolume">

        <RadioButton
            android:id="@+id/radioButton100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:buttonTint="@color/white"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/botao100"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:shadowColor="@color/backgroundBlack"
            android:shadowDy="2"
            android:shadowDx="2"
            android:shadowRadius="2"/>

        <RadioButton
            android:id="@+id/radioButton250"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:buttonTint="@color/white"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/botao250"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:shadowColor="@color/backgroundBlack"
            android:shadowDy="2"
            android:shadowDx="2"
            android:shadowRadius="2"/>

        <RadioButton
            android:id="@+id/radioButton500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:buttonTint="@color/white"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/botao500"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:shadowColor="@color/backgroundBlack"
            android:shadowDy="2"
            android:shadowDx="2"
            android:shadowRadius="2"/>

        <RadioButton
            android:id="@+id/radioButton1000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:buttonTint="@color/white"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/botao1000"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:shadowColor="@color/backgroundBlack"
            android:shadowDy="2"
            android:shadowDx="2"
            android:shadowRadius="2"/>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutA"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:elevation="30dp"
        android:hint="@string/textQtdProgramada"
        android:shadowColor="@color/backgroundBlack"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/bbraunVerde"
        app:boxCollapsedPaddingTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:inputType="number"
            android:shadowColor="@color/backgroundBlack"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:textColor="@color/white"
            android:textColorHighlight="@color/bbraunRoxo"
            android:textColorLink="@color/bbraunRoxo"
            android:textSize="20sp"
            android:typeface="monospace" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/textQtdProduzida"
        android:shadowColor="@color/backgroundBlack"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/bbraunVerde"
        app:boxCollapsedPaddingTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutA">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextProduzida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:inputType="number"
            android:shadowColor="@color/backgroundBlack"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:textColor="@color/white"
            android:textColorHighlight="@color/bbraunRoxo"
            android:textColorLink="@color/bbraunRoxo"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonCalcular"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:elevation="30dp"
        android:fontFamily="monospace"
        android:shadowColor="@color/backgroundBlack"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/botaoCalcular"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:elevation="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalcular">

        <TextView
            android:id="@+id/textViewResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewHorario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:elevation="30dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>