<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bbraunVerde"
    tools:context=".CalculadoraEficiencia">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:background="@color/bbraunRoxo"
        android:gravity="center"
        android:shadowColor="@color/backgroundBlack"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/calculadoraEficiencia"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutA"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:elevation="30dp"
        android:hint="@string/textA"
        android:shadowColor="@color/backgroundBlack"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/bbraunVerde"
        app:boxCollapsedPaddingTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:inputType="number"
            android:shadowColor="@color/backgroundBlack"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:textColor="@color/white"
            android:textColorHighlight="@color/bbraunRoxo"
            android:textColorLink="@color/bbraunRoxo"
            android:textSize="20sp"
            android:typeface="monospace" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutB"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:elevation="30dp"
        android:hint="@string/textB"
        android:shadowColor="@color/backgroundBlack"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/bbraunVerde"
        app:boxCollapsedPaddingTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutA">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:inputType="number"
            android:shadowColor="@color/backgroundBlack"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:textColor="@color/white"
            android:textColorHighlight="@color/bbraunRoxo"
            android:textColorLink="@color/bbraunRoxo"
            android:textSize="20sp"
            android:typeface="monospace" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutC"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:elevation="30dp"
        android:hint="@string/textC"
        android:shadowColor="@color/backgroundBlack"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/bbraunVerde"
        app:boxCollapsedPaddingTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutB">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:inputType="number"
            android:shadowColor="@color/backgroundBlack"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:textColor="@color/white"
            android:textColorHighlight="@color/bbraunRoxo"
            android:textColorLink="@color/bbraunRoxo"
            android:textSize="20sp"
            android:typeface="monospace" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutD"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:elevation="30dp"
        android:hint="@string/textD"
        android:shadowColor="@color/backgroundBlack"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/bbraunVerde"
        app:boxCollapsedPaddingTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutC">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:inputType="number"
            android:shadowColor="@color/backgroundBlack"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:textColor="@color/white"
            android:textColorHighlight="@color/bbraunRoxo"
            android:textColorLink="@color/bbraunRoxo"
            android:textSize="20sp"
            android:typeface="monospace" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewEficiencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="monospace"
        android:shadowColor="@color/black"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutD" />

</androidx.constraintlayout.widget.ConstraintLayout>